# gemma

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  BIOMEDICAL_DATASET_README.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  KV_CACHE_DESIGN.md  PR_DESCRIPTION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  create_dataset.py  finetune_gemma.py  install_macos.sh  pr_body.md  pr_body.txt  pr_description.md  preprocess_pdfs.py  pyproject.toml  requirements.txt
.github/workflows/: pytest_and_autopublish.yml  runtests.yaml
colabs/: fine_tuning_tutorial.ipynb  fine_tuning_tutorial.py  finetuning.ipynb  gsm8k_eval.ipynb  gsm8k_eval.py  lora.ipynb  lora_finetuning.ipynb  lora_sampling.ipynb  multimodal.ipynb  prefix_finetuning.ipynb  prefix_sampling.ipynb  qlora_finetuning.ipynb  quantization_aware_training.ipynb  quantization_sampling.ipynb  sampling.ipynb  sampling_tutorial.ipynb  sampling_tutorial.py  sharding.ipynb  tokenizer.ipynb  tool_use.ipynb
docs/: MACOS_INSTALL.md  batch_image_loading.md  checkpoints.md  conf.py  finetuning.md  guide.md  index.md  lora.md  lora_finetuning.md  lora_sampling.md  multimodal.md  overview.md  quantization_aware_training.md  requirements.txt  research.md  sampling.md  sharding.md  tokenizer.md  tool_use.md
examples/: batch_image_loading.py  cache_audit.py  cache_local_window_test.py  cache_probe.py  classification.py  dpo.py  einsum_quantization_bug_demo.py  lora.py  mmlu.py  mmlu_eval.py  multimodal.py  next_token_prediction.py  npo.py  qlora.py  sampling.py  seq2seq.py  sharding.py
examples/gemma3-mcp-agent/: README.md  config.py  mcp_config.json  requirements.txt  server.py  system_utils.py  test_config.py
examples/mmlu_ev/: MMLU_EV_AUTOMODEL.PY  MMLU_EV_pipeline.PY
gemma/: __init__.py  layers.py  layers_test.py  modules.py  modules_test.py  params.py  params_test.py  positional_embeddings.py  positional_embeddings_test.py  sampler.py  sampler_test.py  sow_lib.py  transformer.py  transformer_test.py
gemma/diffusion/: __init__.py  _chat_sampler.py  _chat_sampler_test.py  _early_stopping.py  _early_stopping_test.py  _models.py  _models_test.py  _paths.py  _sampler.py  _sampler_test.py  _transformer.py  example.ipynb
gemma/diffusion/hackable_diffusion_adapter/: AGENT.md  README.md  checkpointed_evaluator.py  eval_main.py  safe_writer.py  sampling_example.ipynb
gemma/examples/: sampling.py
gemma/gm/: __init__.py
gemma/gm/ckpts/: __init__.py  _checkpoint.py  _compat.py  _lora.py  _paths.py  _paths_test.py  _policy.py  _quantization.py
gemma/gm/data/: __init__.py  _functional.py  _functional_test.py  _parquet.py  _tasks.py  _tasks_test.py  _transforms.py  _transforms_test.py
gemma/gm/evals/: __init__.py  _sample.py
gemma/gm/losses/: __init__.py  _dpo.py  _dpo_test.py  _npo.py  _npo_test.py
gemma/gm/math/: __init__.py  _misc.py  _misc_test.py  _pos_utils.py  _pos_utils_test.py  _positional_embeddings.py  _positional_embeddings_test.py
gemma/gm/nn/: __init__.py  _config.py  _experimental.py  _gemma.py  _layers.py  _layers_test.py  _lora.py  _lora_test.py  _modules.py  _modules_mask_test.py  _modules_test.py  _policy.py  _prefix.py  _prefix_test.py  _qlora.py  _quantization.py  _transformer.py  _transformer_like.py  _transformer_like_test.py  _transformer_test.py  config.py
gemma/gm/sharding/: __init__.py
gemma/gm/testing/: __init__.py  _dummy_model.py  _dummy_tokenizer.py  _fixtures.py
gemma/gm/tests/: examples_test.py  sampler_e2e_test.py
gemma/gm/text/: __init__.py  _chat_sampler.py  (+18 more)
gemma/multimodal/: __init__.py  batch_image_loader.py  batch_image_loader_test.py  image.py  vision.py  vision_utils.py
gemma/peft/: README.md  __init__.py  _einsum_utils.py  _einsum_utils_test.py  _interceptors.py  _interceptors_test.py  _lora.py  _lora_test.py  _qlora.py  _qlora_test.py  _quantization.py  _quantization_test.py  _quantization_utils.py  _tree_utils.py  _tree_utils_test.py
gemma/script/: convert_orbax_to_roc_lib.py  convert_orbax_to_roc_lib_test.py  convert_orbax_to_roc_test.py
tests/evaluation/: non_english_results.md
(+121 files in other folders)
